--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,9 +25,8 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "socket.io-client": "^4.8.1",
-    "tailwind-scrollbar-hide": "^4.0.0"
+    "tailwind-scrollbar-hide": "^4.0.0",
     "react-flatpickr": "^4.0.11",
-    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
     "uuid": "^13.0.0",
     "vaul": "^1.1.2"
