--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -16,6 +16,9 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": true,
     "strictBindCallApply": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "paths": {
+      "@prisma/mongoClient": ["prisma/mongodb/generated/@prisma/mongodb-client/index"]
+    }
   }
 }
