--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,16 +18,17 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
+    "jose": "^6.1.2",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "19.1.0",
+    "react-flatpickr": "^4.0.11",
     "react-icons": "^5.5.0",
     "socket.io-client": "^4.8.1",
-    "tailwind-scrollbar-hide": "^4.0.0",
-    "react-flatpickr": "^4.0.11",
     "tailwind-merge": "^3.3.1",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "uuid": "^13.0.0",
     "vaul": "^1.1.2"
   },
