--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-apexcharts": "^1.7.0",
     "react-dom": "19.1.0",
     "react-flatpickr": "^4.0.11",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
