--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,8 @@
     "seed": "ts-node prisma/postgres/seed.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.937.0",
+    "@aws-sdk/lib-storage": "^3.937.0",
     "@nestjs-modules/ioredis": "^2.0.2",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
@@ -30,12 +32,15 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/platform-socket.io": "^11.1.6",
     "@nestjs/schedule": "^6.0.1",
+    "@nestjs/terminus": "^11.0.0-beta.1",
     "@prisma/client": "^6.19.0",
     "@types/bcrypt": "^6.0.0",
     "@types/nodemailer": "^7.0.3",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "cloudflare": "^5.2.0",
+    "common": "^0.2.5",
     "ioredis": "^5.8.2",
     "nodemailer": "^7.0.10",
     "passport": "^0.7.0",
