--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,12 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "seed": "ts-node prisma/postgres/seed.ts"
+    "seed": "ts-node prisma/postgres/seed.ts",
+    "seed:videos": "ts-node prisma/postgres/seed-videos.ts",
+    "seed:documents": "ts-node prisma/postgres/seed-documents.ts",
+    "seed:teacher": "ts-node prisma/postgres/seed-teacher.ts",
+    "db:generate": "npx prisma generate && npx prisma generate --schema=./prisma/mongodb/schema.prisma",
+    "db:push": "npx prisma db push && npx prisma db push --schema=./prisma/mongodb/schema.prisma"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.937.0",
