Use sudo for docker-compose commands in deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,5 +29,5 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd /home/${{ secrets.SSH_USER }}
-            docker-compose pull
-            docker-compose up -d --remove-orphans
+            sudo docker-compose pull
+            sudo docker-compose up -d --remove-orphans
