commit to host BE

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,51 +1,44 @@
-# ================================
-# Stage 1: Build
-# ================================
-FROM node:20-alpine AS builder
+# -------------------------
+# 1. BASE IMAGE
+# -------------------------
+FROM node:18-alpine AS builder
+
 WORKDIR /app
 
 # Copy package files
 COPY package*.json ./
 
-# Install all dependencies including devDependencies
+# Install dependencies
 RUN npm install
 
-# Copy Prisma schema (required before generating)
-COPY prisma ./prisma
-
-# Generate Prisma Client
-RUN npx prisma generate
-
-# Copy the entire project
+# Copy source code
 COPY . .
+
+# Prisma generate
+RUN npx prisma generate
 
 # Build NestJS
 RUN npm run build
 
+# -------------------------
+# 2. PRODUCTION IMAGE
+# -------------------------
+FROM node:18-alpine AS runner
 
-# ================================
-# Stage 2: Production Image
-# ================================
-FROM node:20-alpine AS runner
 WORKDIR /app
 
-# Copy package files
 COPY package*.json ./
+# Install only production dependencies
+RUN npm install --omit=dev
 
-# Install production dependencies
-RUN npm install --only=production
-
-# Copy Prisma schema (optional but recommended)
-COPY prisma ./prisma
-
-# Copy the compiled NestJS dist folder
+# Copy build output
 COPY --from=builder /app/dist ./dist
 
-# Copy Prisma Client generated in the builder stage
-COPY --from=builder /app/node_modules/.prisma ./node_modules/.prisma
+# Copy Prisma folder
+COPY prisma ./prisma
 
-# Start the application
-# (Uncomment the next line if you want automatic DB migrations)
-# CMD ["sh", "-c", "npx prisma migrate deploy && node dist/main.js"]
+ENV NODE_ENV=production
+
+EXPOSE 4000
 
 CMD ["node", "dist/main.js"]
