livestream + teacher fix without test

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,17 @@
 {
     "prisma.pinToPrisma6": true,
-  //   "files.watcherExclude": {
-  //   "**/node_modules/**": true,
-  //   "**/.next/**": true,
-  //   "**/dist/**": true,
-  //   "**/build/**": true,
-  //   "**/.turbo/**": true
-  // },
-  // "files.exclude": {
-  //   "**/node_modules": true,
-  //   "**/.next": true,
-  //   "**/dist": true
-  // },
+    "files.watcherExclude": {
+    "**/node_modules/**": true,
+    "**/.next/**": true,
+    "**/dist/**": true,
+    "**/build/**": true,
+    "**/.turbo/**": true
+  },
+  "files.exclude": {
+    "**/node_modules": true,
+    "**/.next": true,
+    "**/dist": true
+  },
   // "eslint.enable": false,
   // "eslint.run": "onSave",
   // "eslint.format.enable": false,
