--- a/backend/tsconfig.build.json
+++ b/backend/tsconfig.build.json
@@ -2,9 +2,10 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src",
-    "sourceMap": true
+    "sourceMap": true,
+    "declaration": true,
+    "noEmit": false
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "test", "dist", "prisma", "**/*.spec.ts"]
+  "exclude": ["node_modules", "test", "dist", "**/*.spec.ts"]
 }
